src/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> def_class class_list
Rule 3     class_list -> def_class
Rule 4     def_class -> class type ocur feature_list ccur semi
Rule 5     def_class -> class type inherits type ocur feature_list ccur semi
Rule 6     feature_list -> <empty>
Rule 7     feature_list -> def_attr semi feature_list
Rule 8     feature_list -> def_func semi feature_list
Rule 9     def_attr -> id colon type
Rule 10    def_attr -> id colon type larrow expr
Rule 11    def_func -> id opar formals cpar colon type ocur expr ccur
Rule 12    formals -> param_list
Rule 13    formals -> param_list_empty
Rule 14    param_list -> param
Rule 15    param_list -> param comma param_list
Rule 16    param_list_empty -> <empty>
Rule 17    param -> id colon type
Rule 18    let_list -> let_assign
Rule 19    let_list -> let_assign comma let_list
Rule 20    let_assign -> param larrow expr
Rule 21    let_assign -> param
Rule 22    cases_list -> casep semi
Rule 23    cases_list -> casep semi cases_list
Rule 24    casep -> id colon type rarrow expr
Rule 25    expr -> id larrow expr
Rule 26    expr -> comp
Rule 27    comp -> comp less op
Rule 28    comp -> comp lesseq op
Rule 29    comp -> comp equal op
Rule 30    comp -> op
Rule 31    op -> op plus term
Rule 32    op -> op minus term
Rule 33    op -> term
Rule 34    term -> term star base_call
Rule 35    term -> term div base_call
Rule 36    term -> base_call
Rule 37    base_call -> factor arroba type dot func_call
Rule 38    base_call -> factor
Rule 39    factor -> atom
Rule 40    factor -> opar expr cpar
Rule 41    factor -> factor dot func_call
Rule 42    factor -> not expr
Rule 43    factor -> func_call
Rule 44    factor -> isvoid base_call
Rule 45    factor -> nox base_call
Rule 46    factor -> let let_list in expr
Rule 47    factor -> case expr of cases_list esac
Rule 48    factor -> if expr then expr else expr fi
Rule 49    factor -> while expr loop expr pool
Rule 50    atom -> num
Rule 51    atom -> id
Rule 52    atom -> new type
Rule 53    atom -> ocur block ccur
Rule 54    atom -> true
Rule 55    atom -> false
Rule 56    atom -> string
Rule 57    block -> expr semi
Rule 58    block -> expr semi block
Rule 59    func_call -> id opar args cpar
Rule 60    args -> arg_list
Rule 61    args -> arg_list_empty
Rule 62    arg_list -> expr
Rule 63    arg_list -> expr comma arg_list
Rule 64    arg_list_empty -> <empty>

Terminals, with rules where they appear

arroba               : 37
case                 : 47
ccur                 : 4 5 11 53
class                : 4 5
colon                : 9 10 11 17 24
comma                : 15 19 63
cpar                 : 11 40 59
div                  : 35
dot                  : 37 41
else                 : 48
equal                : 29
error                : 
esac                 : 47
false                : 55
fi                   : 48
id                   : 9 10 11 17 24 25 51 59
if                   : 48
in                   : 46
inherits             : 5
isvoid               : 44
larrow               : 10 20 25
less                 : 27
lesseq               : 28
let                  : 46
loop                 : 49
minus                : 32
new                  : 52
not                  : 42
nox                  : 45
num                  : 50
ocur                 : 4 5 11 53
of                   : 47
opar                 : 11 40 59
plus                 : 31
pool                 : 49
rarrow               : 24
semi                 : 4 5 7 8 22 23 57 58
star                 : 34
string               : 56
then                 : 48
true                 : 54
type                 : 4 5 5 9 10 11 17 24 37 52
while                : 49

Nonterminals, with rules where they appear

arg_list             : 60 63
arg_list_empty       : 61
args                 : 59
atom                 : 39
base_call            : 34 35 36 44 45
block                : 53 58
casep                : 22 23
cases_list           : 23 47
class_list           : 1 2
comp                 : 26 27 28 29
def_attr             : 7
def_class            : 2 3
def_func             : 8
expr                 : 10 11 20 24 25 40 42 46 47 48 48 48 49 49 57 58 62 63
factor               : 37 38 41
feature_list         : 4 5 7 8
formals              : 11
func_call            : 37 41 43
let_assign           : 18 19
let_list             : 19 46
op                   : 27 28 29 30 31 32
param                : 14 15 20 21
param_list           : 12 15
param_list_empty     : 13
program              : 0
term                 : 31 32 33 34 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . def_class class_list
    (3) class_list -> . def_class
    (4) def_class -> . class type ocur feature_list ccur semi
    (5) def_class -> . class type inherits type ocur feature_list ccur semi

    class           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    def_class                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .

    $end            reduce using rule 1 (program -> class_list .)


state 3

    (2) class_list -> def_class . class_list
    (3) class_list -> def_class .
    (2) class_list -> . def_class class_list
    (3) class_list -> . def_class
    (4) def_class -> . class type ocur feature_list ccur semi
    (5) def_class -> . class type inherits type ocur feature_list ccur semi

    $end            reduce using rule 3 (class_list -> def_class .)
    class           shift and go to state 4

    def_class                      shift and go to state 3
    class_list                     shift and go to state 5

state 4

    (4) def_class -> class . type ocur feature_list ccur semi
    (5) def_class -> class . type inherits type ocur feature_list ccur semi

    type            shift and go to state 6


state 5

    (2) class_list -> def_class class_list .

    $end            reduce using rule 2 (class_list -> def_class class_list .)


state 6

    (4) def_class -> class type . ocur feature_list ccur semi
    (5) def_class -> class type . inherits type ocur feature_list ccur semi

    ocur            shift and go to state 7
    inherits        shift and go to state 8


state 7

    (4) def_class -> class type ocur . feature_list ccur semi
    (6) feature_list -> .
    (7) feature_list -> . def_attr semi feature_list
    (8) feature_list -> . def_func semi feature_list
    (9) def_attr -> . id colon type
    (10) def_attr -> . id colon type larrow expr
    (11) def_func -> . id opar formals cpar colon type ocur expr ccur

    ccur            reduce using rule 6 (feature_list -> .)
    id              shift and go to state 12

    feature_list                   shift and go to state 9
    def_attr                       shift and go to state 10
    def_func                       shift and go to state 11

state 8

    (5) def_class -> class type inherits . type ocur feature_list ccur semi

    type            shift and go to state 13


state 9

    (4) def_class -> class type ocur feature_list . ccur semi

    ccur            shift and go to state 14


state 10

    (7) feature_list -> def_attr . semi feature_list

    semi            shift and go to state 15


state 11

    (8) feature_list -> def_func . semi feature_list

    semi            shift and go to state 16


state 12

    (9) def_attr -> id . colon type
    (10) def_attr -> id . colon type larrow expr
    (11) def_func -> id . opar formals cpar colon type ocur expr ccur

    colon           shift and go to state 17
    opar            shift and go to state 18


state 13

    (5) def_class -> class type inherits type . ocur feature_list ccur semi

    ocur            shift and go to state 19


state 14

    (4) def_class -> class type ocur feature_list ccur . semi

    semi            shift and go to state 20


state 15

    (7) feature_list -> def_attr semi . feature_list
    (6) feature_list -> .
    (7) feature_list -> . def_attr semi feature_list
    (8) feature_list -> . def_func semi feature_list
    (9) def_attr -> . id colon type
    (10) def_attr -> . id colon type larrow expr
    (11) def_func -> . id opar formals cpar colon type ocur expr ccur

    ccur            reduce using rule 6 (feature_list -> .)
    id              shift and go to state 12

    def_attr                       shift and go to state 10
    feature_list                   shift and go to state 21
    def_func                       shift and go to state 11

state 16

    (8) feature_list -> def_func semi . feature_list
    (6) feature_list -> .
    (7) feature_list -> . def_attr semi feature_list
    (8) feature_list -> . def_func semi feature_list
    (9) def_attr -> . id colon type
    (10) def_attr -> . id colon type larrow expr
    (11) def_func -> . id opar formals cpar colon type ocur expr ccur

    ccur            reduce using rule 6 (feature_list -> .)
    id              shift and go to state 12

    def_func                       shift and go to state 11
    feature_list                   shift and go to state 22
    def_attr                       shift and go to state 10

state 17

    (9) def_attr -> id colon . type
    (10) def_attr -> id colon . type larrow expr

    type            shift and go to state 23


state 18

    (11) def_func -> id opar . formals cpar colon type ocur expr ccur
    (12) formals -> . param_list
    (13) formals -> . param_list_empty
    (14) param_list -> . param
    (15) param_list -> . param comma param_list
    (16) param_list_empty -> .
    (17) param -> . id colon type

    cpar            reduce using rule 16 (param_list_empty -> .)
    id              shift and go to state 24

    formals                        shift and go to state 25
    param_list                     shift and go to state 26
    param_list_empty               shift and go to state 27
    param                          shift and go to state 28

state 19

    (5) def_class -> class type inherits type ocur . feature_list ccur semi
    (6) feature_list -> .
    (7) feature_list -> . def_attr semi feature_list
    (8) feature_list -> . def_func semi feature_list
    (9) def_attr -> . id colon type
    (10) def_attr -> . id colon type larrow expr
    (11) def_func -> . id opar formals cpar colon type ocur expr ccur

    ccur            reduce using rule 6 (feature_list -> .)
    id              shift and go to state 12

    feature_list                   shift and go to state 29
    def_attr                       shift and go to state 10
    def_func                       shift and go to state 11

state 20

    (4) def_class -> class type ocur feature_list ccur semi .

    class           reduce using rule 4 (def_class -> class type ocur feature_list ccur semi .)
    $end            reduce using rule 4 (def_class -> class type ocur feature_list ccur semi .)


state 21

    (7) feature_list -> def_attr semi feature_list .

    ccur            reduce using rule 7 (feature_list -> def_attr semi feature_list .)


state 22

    (8) feature_list -> def_func semi feature_list .

    ccur            reduce using rule 8 (feature_list -> def_func semi feature_list .)


state 23

    (9) def_attr -> id colon type .
    (10) def_attr -> id colon type . larrow expr

    semi            reduce using rule 9 (def_attr -> id colon type .)
    larrow          shift and go to state 30


state 24

    (17) param -> id . colon type

    colon           shift and go to state 31


state 25

    (11) def_func -> id opar formals . cpar colon type ocur expr ccur

    cpar            shift and go to state 32


state 26

    (12) formals -> param_list .

    cpar            reduce using rule 12 (formals -> param_list .)


state 27

    (13) formals -> param_list_empty .

    cpar            reduce using rule 13 (formals -> param_list_empty .)


state 28

    (14) param_list -> param .
    (15) param_list -> param . comma param_list

    cpar            reduce using rule 14 (param_list -> param .)
    comma           shift and go to state 33


state 29

    (5) def_class -> class type inherits type ocur feature_list . ccur semi

    ccur            shift and go to state 34


state 30

    (10) def_attr -> id colon type larrow . expr
    (25) expr -> . id larrow expr
    (26) expr -> . comp
    (27) comp -> . comp less op
    (28) comp -> . comp lesseq op
    (29) comp -> . comp equal op
    (30) comp -> . op
    (31) op -> . op plus term
    (32) op -> . op minus term
    (33) op -> . term
    (34) term -> . term star base_call
    (35) term -> . term div base_call
    (36) term -> . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    id              shift and go to state 35
    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    expr                           shift and go to state 36
    comp                           shift and go to state 37
    op                             shift and go to state 38
    term                           shift and go to state 39
    base_call                      shift and go to state 40
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 31

    (17) param -> id colon . type

    type            shift and go to state 58


state 32

    (11) def_func -> id opar formals cpar . colon type ocur expr ccur

    colon           shift and go to state 59


state 33

    (15) param_list -> param comma . param_list
    (14) param_list -> . param
    (15) param_list -> . param comma param_list
    (17) param -> . id colon type

    id              shift and go to state 24

    param                          shift and go to state 28
    param_list                     shift and go to state 60

state 34

    (5) def_class -> class type inherits type ocur feature_list ccur . semi

    semi            shift and go to state 61


state 35

    (25) expr -> id . larrow expr
    (51) atom -> id .
    (59) func_call -> id . opar args cpar

    larrow          shift and go to state 62
    arroba          reduce using rule 51 (atom -> id .)
    dot             reduce using rule 51 (atom -> id .)
    star            reduce using rule 51 (atom -> id .)
    div             reduce using rule 51 (atom -> id .)
    plus            reduce using rule 51 (atom -> id .)
    minus           reduce using rule 51 (atom -> id .)
    less            reduce using rule 51 (atom -> id .)
    lesseq          reduce using rule 51 (atom -> id .)
    equal           reduce using rule 51 (atom -> id .)
    semi            reduce using rule 51 (atom -> id .)
    cpar            reduce using rule 51 (atom -> id .)
    of              reduce using rule 51 (atom -> id .)
    then            reduce using rule 51 (atom -> id .)
    loop            reduce using rule 51 (atom -> id .)
    comma           reduce using rule 51 (atom -> id .)
    in              reduce using rule 51 (atom -> id .)
    else            reduce using rule 51 (atom -> id .)
    pool            reduce using rule 51 (atom -> id .)
    ccur            reduce using rule 51 (atom -> id .)
    fi              reduce using rule 51 (atom -> id .)
    opar            shift and go to state 63


state 36

    (10) def_attr -> id colon type larrow expr .

    semi            reduce using rule 10 (def_attr -> id colon type larrow expr .)


state 37

    (26) expr -> comp .
    (27) comp -> comp . less op
    (28) comp -> comp . lesseq op
    (29) comp -> comp . equal op

  ! shift/reduce conflict for less resolved as shift
  ! shift/reduce conflict for lesseq resolved as shift
  ! shift/reduce conflict for equal resolved as shift
    semi            reduce using rule 26 (expr -> comp .)
    cpar            reduce using rule 26 (expr -> comp .)
    arroba          reduce using rule 26 (expr -> comp .)
    dot             reduce using rule 26 (expr -> comp .)
    star            reduce using rule 26 (expr -> comp .)
    div             reduce using rule 26 (expr -> comp .)
    plus            reduce using rule 26 (expr -> comp .)
    minus           reduce using rule 26 (expr -> comp .)
    of              reduce using rule 26 (expr -> comp .)
    then            reduce using rule 26 (expr -> comp .)
    loop            reduce using rule 26 (expr -> comp .)
    comma           reduce using rule 26 (expr -> comp .)
    in              reduce using rule 26 (expr -> comp .)
    else            reduce using rule 26 (expr -> comp .)
    pool            reduce using rule 26 (expr -> comp .)
    ccur            reduce using rule 26 (expr -> comp .)
    fi              reduce using rule 26 (expr -> comp .)
    less            shift and go to state 64
    lesseq          shift and go to state 65
    equal           shift and go to state 66

  ! less            [ reduce using rule 26 (expr -> comp .) ]
  ! lesseq          [ reduce using rule 26 (expr -> comp .) ]
  ! equal           [ reduce using rule 26 (expr -> comp .) ]


state 38

    (30) comp -> op .
    (31) op -> op . plus term
    (32) op -> op . minus term

  ! shift/reduce conflict for plus resolved as shift
  ! shift/reduce conflict for minus resolved as shift
    less            reduce using rule 30 (comp -> op .)
    lesseq          reduce using rule 30 (comp -> op .)
    equal           reduce using rule 30 (comp -> op .)
    semi            reduce using rule 30 (comp -> op .)
    cpar            reduce using rule 30 (comp -> op .)
    arroba          reduce using rule 30 (comp -> op .)
    dot             reduce using rule 30 (comp -> op .)
    star            reduce using rule 30 (comp -> op .)
    div             reduce using rule 30 (comp -> op .)
    of              reduce using rule 30 (comp -> op .)
    then            reduce using rule 30 (comp -> op .)
    loop            reduce using rule 30 (comp -> op .)
    comma           reduce using rule 30 (comp -> op .)
    in              reduce using rule 30 (comp -> op .)
    else            reduce using rule 30 (comp -> op .)
    pool            reduce using rule 30 (comp -> op .)
    ccur            reduce using rule 30 (comp -> op .)
    fi              reduce using rule 30 (comp -> op .)
    plus            shift and go to state 67
    minus           shift and go to state 68

  ! plus            [ reduce using rule 30 (comp -> op .) ]
  ! minus           [ reduce using rule 30 (comp -> op .) ]


state 39

    (33) op -> term .
    (34) term -> term . star base_call
    (35) term -> term . div base_call

  ! shift/reduce conflict for star resolved as shift
  ! shift/reduce conflict for div resolved as shift
    plus            reduce using rule 33 (op -> term .)
    minus           reduce using rule 33 (op -> term .)
    less            reduce using rule 33 (op -> term .)
    lesseq          reduce using rule 33 (op -> term .)
    equal           reduce using rule 33 (op -> term .)
    semi            reduce using rule 33 (op -> term .)
    cpar            reduce using rule 33 (op -> term .)
    arroba          reduce using rule 33 (op -> term .)
    dot             reduce using rule 33 (op -> term .)
    of              reduce using rule 33 (op -> term .)
    then            reduce using rule 33 (op -> term .)
    loop            reduce using rule 33 (op -> term .)
    comma           reduce using rule 33 (op -> term .)
    in              reduce using rule 33 (op -> term .)
    else            reduce using rule 33 (op -> term .)
    pool            reduce using rule 33 (op -> term .)
    ccur            reduce using rule 33 (op -> term .)
    fi              reduce using rule 33 (op -> term .)
    star            shift and go to state 69
    div             shift and go to state 70

  ! star            [ reduce using rule 33 (op -> term .) ]
  ! div             [ reduce using rule 33 (op -> term .) ]


state 40

    (36) term -> base_call .

    star            reduce using rule 36 (term -> base_call .)
    div             reduce using rule 36 (term -> base_call .)
    plus            reduce using rule 36 (term -> base_call .)
    minus           reduce using rule 36 (term -> base_call .)
    less            reduce using rule 36 (term -> base_call .)
    lesseq          reduce using rule 36 (term -> base_call .)
    equal           reduce using rule 36 (term -> base_call .)
    semi            reduce using rule 36 (term -> base_call .)
    cpar            reduce using rule 36 (term -> base_call .)
    arroba          reduce using rule 36 (term -> base_call .)
    dot             reduce using rule 36 (term -> base_call .)
    of              reduce using rule 36 (term -> base_call .)
    then            reduce using rule 36 (term -> base_call .)
    loop            reduce using rule 36 (term -> base_call .)
    comma           reduce using rule 36 (term -> base_call .)
    in              reduce using rule 36 (term -> base_call .)
    else            reduce using rule 36 (term -> base_call .)
    pool            reduce using rule 36 (term -> base_call .)
    ccur            reduce using rule 36 (term -> base_call .)
    fi              reduce using rule 36 (term -> base_call .)


state 41

    (37) base_call -> factor . arroba type dot func_call
    (38) base_call -> factor .
    (41) factor -> factor . dot func_call

  ! shift/reduce conflict for arroba resolved as shift
  ! shift/reduce conflict for dot resolved as shift
    arroba          shift and go to state 71
    star            reduce using rule 38 (base_call -> factor .)
    div             reduce using rule 38 (base_call -> factor .)
    plus            reduce using rule 38 (base_call -> factor .)
    minus           reduce using rule 38 (base_call -> factor .)
    less            reduce using rule 38 (base_call -> factor .)
    lesseq          reduce using rule 38 (base_call -> factor .)
    equal           reduce using rule 38 (base_call -> factor .)
    semi            reduce using rule 38 (base_call -> factor .)
    cpar            reduce using rule 38 (base_call -> factor .)
    of              reduce using rule 38 (base_call -> factor .)
    then            reduce using rule 38 (base_call -> factor .)
    loop            reduce using rule 38 (base_call -> factor .)
    comma           reduce using rule 38 (base_call -> factor .)
    in              reduce using rule 38 (base_call -> factor .)
    else            reduce using rule 38 (base_call -> factor .)
    pool            reduce using rule 38 (base_call -> factor .)
    ccur            reduce using rule 38 (base_call -> factor .)
    fi              reduce using rule 38 (base_call -> factor .)
    dot             shift and go to state 72

  ! arroba          [ reduce using rule 38 (base_call -> factor .) ]
  ! dot             [ reduce using rule 38 (base_call -> factor .) ]


state 42

    (43) factor -> func_call .

    arroba          reduce using rule 43 (factor -> func_call .)
    dot             reduce using rule 43 (factor -> func_call .)
    star            reduce using rule 43 (factor -> func_call .)
    div             reduce using rule 43 (factor -> func_call .)
    plus            reduce using rule 43 (factor -> func_call .)
    minus           reduce using rule 43 (factor -> func_call .)
    less            reduce using rule 43 (factor -> func_call .)
    lesseq          reduce using rule 43 (factor -> func_call .)
    equal           reduce using rule 43 (factor -> func_call .)
    semi            reduce using rule 43 (factor -> func_call .)
    cpar            reduce using rule 43 (factor -> func_call .)
    of              reduce using rule 43 (factor -> func_call .)
    then            reduce using rule 43 (factor -> func_call .)
    loop            reduce using rule 43 (factor -> func_call .)
    comma           reduce using rule 43 (factor -> func_call .)
    in              reduce using rule 43 (factor -> func_call .)
    else            reduce using rule 43 (factor -> func_call .)
    pool            reduce using rule 43 (factor -> func_call .)
    ccur            reduce using rule 43 (factor -> func_call .)
    fi              reduce using rule 43 (factor -> func_call .)


state 43

    (39) factor -> atom .

    arroba          reduce using rule 39 (factor -> atom .)
    dot             reduce using rule 39 (factor -> atom .)
    star            reduce using rule 39 (factor -> atom .)
    div             reduce using rule 39 (factor -> atom .)
    plus            reduce using rule 39 (factor -> atom .)
    minus           reduce using rule 39 (factor -> atom .)
    less            reduce using rule 39 (factor -> atom .)
    lesseq          reduce using rule 39 (factor -> atom .)
    equal           reduce using rule 39 (factor -> atom .)
    semi            reduce using rule 39 (factor -> atom .)
    cpar            reduce using rule 39 (factor -> atom .)
    of              reduce using rule 39 (factor -> atom .)
    then            reduce using rule 39 (factor -> atom .)
    loop            reduce using rule 39 (factor -> atom .)
    comma           reduce using rule 39 (factor -> atom .)
    in              reduce using rule 39 (factor -> atom .)
    else            reduce using rule 39 (factor -> atom .)
    pool            reduce using rule 39 (factor -> atom .)
    ccur            reduce using rule 39 (factor -> atom .)
    fi              reduce using rule 39 (factor -> atom .)


state 44

    (40) factor -> opar . expr cpar
    (25) expr -> . id larrow expr
    (26) expr -> . comp
    (27) comp -> . comp less op
    (28) comp -> . comp lesseq op
    (29) comp -> . comp equal op
    (30) comp -> . op
    (31) op -> . op plus term
    (32) op -> . op minus term
    (33) op -> . term
    (34) term -> . term star base_call
    (35) term -> . term div base_call
    (36) term -> . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    id              shift and go to state 35
    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    expr                           shift and go to state 73
    comp                           shift and go to state 37
    op                             shift and go to state 38
    term                           shift and go to state 39
    base_call                      shift and go to state 40
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 45

    (42) factor -> not . expr
    (25) expr -> . id larrow expr
    (26) expr -> . comp
    (27) comp -> . comp less op
    (28) comp -> . comp lesseq op
    (29) comp -> . comp equal op
    (30) comp -> . op
    (31) op -> . op plus term
    (32) op -> . op minus term
    (33) op -> . term
    (34) term -> . term star base_call
    (35) term -> . term div base_call
    (36) term -> . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    id              shift and go to state 35
    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    expr                           shift and go to state 74
    comp                           shift and go to state 37
    op                             shift and go to state 38
    term                           shift and go to state 39
    base_call                      shift and go to state 40
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 46

    (44) factor -> isvoid . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    id              shift and go to state 76
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    base_call                      shift and go to state 75
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 47

    (45) factor -> nox . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    id              shift and go to state 76
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    base_call                      shift and go to state 77
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 48

    (46) factor -> let . let_list in expr
    (18) let_list -> . let_assign
    (19) let_list -> . let_assign comma let_list
    (20) let_assign -> . param larrow expr
    (21) let_assign -> . param
    (17) param -> . id colon type

    id              shift and go to state 24

    let_list                       shift and go to state 78
    let_assign                     shift and go to state 79
    param                          shift and go to state 80

state 49

    (47) factor -> case . expr of cases_list esac
    (25) expr -> . id larrow expr
    (26) expr -> . comp
    (27) comp -> . comp less op
    (28) comp -> . comp lesseq op
    (29) comp -> . comp equal op
    (30) comp -> . op
    (31) op -> . op plus term
    (32) op -> . op minus term
    (33) op -> . term
    (34) term -> . term star base_call
    (35) term -> . term div base_call
    (36) term -> . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    id              shift and go to state 35
    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    expr                           shift and go to state 81
    comp                           shift and go to state 37
    op                             shift and go to state 38
    term                           shift and go to state 39
    base_call                      shift and go to state 40
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 50

    (48) factor -> if . expr then expr else expr fi
    (25) expr -> . id larrow expr
    (26) expr -> . comp
    (27) comp -> . comp less op
    (28) comp -> . comp lesseq op
    (29) comp -> . comp equal op
    (30) comp -> . op
    (31) op -> . op plus term
    (32) op -> . op minus term
    (33) op -> . term
    (34) term -> . term star base_call
    (35) term -> . term div base_call
    (36) term -> . base_call
    (37) base_call -> . factor arroba type dot func_call
    (38) base_call -> . factor
    (39) factor -> . atom
    (40) factor -> . opar expr cpar
    (41) factor -> . factor dot func_call
    (42) factor -> . not expr
    (43) factor -> . func_call
    (44) factor -> . isvoid base_call
    (45) factor -> . nox base_call
    (46) factor -> . let let_list in expr
    (47) factor -> . case expr of cases_list esac
    (48) factor -> . if expr then expr else expr fi
    (49) factor -> . while expr loop expr pool
    (50) atom -> . num
    (51) atom -> . id
    (52) atom -> . new type
    (53) atom -> . ocur block ccur
    (54) atom -> . true
    (55) atom -> . false
    (56) atom -> . string
    (59) func_call -> . id opar args cpar

    id              shift and go to state 35
    opar            shift and go to state 44
    not             shift and go to state 45
    isvoid          shift and go to state 46
    nox             shift and go to state 47
    let             shift and go to state 48
    case            shift and go to state 49
    if              shift and go to state 50
    while           shift and go to state 51
    num             shift and go to state 52
    new             shift and go to state 53
    ocur            shift and go to state 54
    true            shift and go to state 55
    false           shift and go to state 56
    string          shift and go to state 57

    expr                           shift and go to state 82
    comp                           shift and go to state 37
    op                             shift and go to state 38
    term                           shift and go to state 39
    base_call                      shift and go to state 40
    factor                         shift and go to state 41
    func_call                      shift and go to state 42
    atom                           shift and go to state 43

state 51
